#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(asio5, 0.2, laf163@gmail.com)
AC_CONFIG_SRCDIR([asio5.cpp])
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_CHECK_LIB([boost_system-mt], [main], , AC_MSG_ERROR("libboost_system required"))
AC_CHECK_LIB([pthread], [main], , AC_MSG_ERROR("libpthread required"))
AC_CHECK_LIB([boost_thread-mt], [main], , AC_MSG_ERROR("libboost_thread-mt required"))

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_SIZE_T

# Checks for library functions.
#AC_CHECK_FUNCS([socket])

AC_OUTPUT(Makefile)
